--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  width: 400px;
+  width: 100%;
   text-align: center;
   padding-left: 10px;
   padding-right: 10px;
@@ -20,8 +20,7 @@ body {
 /* LAYOUT
 /*******************************************/
 img{
-  display: block;
-  text-align: left;
+  text-align: center;
   width: 400px;
   height: 400px;
 }
