--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,16 @@ p {
   font-size: 18px;
 }
 
+@media (max-width:500px) {
+  img {
+    width: 100%;
+  }
+
+  p {
+    font-size: 1em;
+  }
+}
+
 
 /******************************************
 /* ADDITIONAL STYLES
